# pirogue-admin-api

./: .gitignore  README.md
.github/workflows/: publish-on-pypi.yml
src/protos/pirogue_admin_api/: access.proto  network.proto  services.proto  system.proto
src/python/: README.md  pyproject.toml  requirements-dev.txt  requirements.txt
src/python/debian/: changelog  control  copyright  rules
src/python/pirogue_admin_api/: GENERATED_CONTENT.md  access_pb2.py  access_pb2.pyi  access_pb2_grpc.py  network_pb2.py  network_pb2_grpc.py  system_pb2.py  system_pb2.pyi
