[build-system]
requires = ["setuptools==66.1.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["pirogue_admin_api*"]
namespaces = false

[project]
name = "pirogue-admin-api"
version = "2.0.4"
description = "API definition of the communication protocol between the administration client and daemon for PiRogue."
readme = "README.md"
license = { text = "GPL-3.0-or-later" }

requires-python = ">= 3.9"
dependencies = [
  "grpcio",
  "pyyaml"
]

authors = [
  {name = "Christophe Andral", email = "christophe@andral.fr"},
]

maintainers = [
  {name = "U+039b", email = "hello@pts-project.org"}
]

[project.urls]
repository = "https://github.com/PiRogueToolSuite/pirogue-admin"
issues = "https://github.com/PiRogueToolSuite/pirogue-admin/issues"